# Navigate-LA-28

./: .gitignore  CLEANUP_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  HDFS_SPARK_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  QUICK_START_GUIDE.md  README.md  SETUP_GUIDE.md  docker-compose.prod.yml  move_to_hdfs.sh  navigate_la28.db
client/: .browserslistrc  .eslintrc.js  .prettierrc.js  BROWSERSLIST.md  Dockerfile.prod  SECURITY.md  config-overrides.js  nginx.conf  package-lock.json  package.json  tsconfig.json
client/src/: App.js  App.test.js  App.tsx  index.css  index.js  index.tsx  setupTests.js  store.js  store.ts
client/src/components/: Analytics.jsx  ErrorBoundary.tsx  Header.jsx  Header.tsx  LoadingSpinner.jsx  LoadingSpinner.tsx  LocationMarker.jsx  LocationMarker.tsx  LoginModal.jsx  LoginModal.tsx  MapContainerComponent.jsx  MapContainerComponent.tsx  ResultsPanel.jsx  ResultsPanel.tsx  ReviewModal.jsx  ReviewModal.tsx  SearchBar.jsx  SearchBar.tsx
client/src/components/analytics/: Analytics.jsx  Analytics.tsx  AnalyticsTabBar.jsx  AnalyticsTabBar.tsx  AttractionsAnalytics.jsx  AttractionsAnalytics.tsx  BusRoutesAnalytics.jsx  BusRoutesAnalytics.tsx  DemographicsAnalytics.jsx  DemographicsAnalytics.tsx  PopularStopsAnalytics.jsx  PopularStopsAnalytics.tsx  index.js  index.ts
client/src/constants/: apiEndpoints.js  apiEndpoints.ts  chartConfig.js
client/src/hooks/: useAnalyticsData.js  useAnalyticsData.ts  useAuth.js  useAuth.ts
client/src/services/: authService.js  authService.ts  mapService.js  mapService.ts  reviewService.js  reviewService.ts
client/src/slices/: authSlice.js  authSlice.ts  locationSlice.js  locationSlice.ts  rootReducer.js  rootReducer.ts  userSlice.js  userSlice.ts
client/src/styles/: App.css  ErrorBoundary.css  Header.css  MapContainerComponent.css  SearchBar.css
client/src/types/: index.ts
client/src/utils/: api.js  api.ts  chartConfig.js  chartConfig.ts  errorHandler.ts  leafletIcons 2.js  leafletIcons.js  leafletIcons.ts  mapIcons.js  securityUtils.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  README.md  SECURITY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
hadoop/conf/: core-site.xml  hdfs-site.xml  mapred-site.xml  yarn-site.xml
server/: .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  database.py  init_db.py  main.py  navigate_la28.db  pyproject.toml  requirements.txt
server/config/: database.py  settings.py
server/models/: __init__.py  olympic_venue.py
server/routes/: olympic_venue_routes.py  review_routes.py  user_routes.py
server/schemas/: base.py  customer_usage.py  place.py  review.py  user.py
server/scripts/: download_and_prepare_datasets.py  populate_all_datasets.py  populate_bus_stops.py  populate_datasets_comprehensive.py  populate_olympic_venues.py  populate_places.py  populate_users.py  verify_place.py
server/services/: analytics_service.py  customer_usage_service.py  geo_service.py  nearest_bustops.py  nearest_places.py  nearest_restrooms.py  olympic_venue_service.py  review_service.py  user_service.py
server/tests/: conftest.py
spark/: Dockerfile
spark/conf/: spark-env.sh
